[project]
name = "git-changes"
version = "0.0.1"
authors = [
    {name="Adwaith-Rajesh", email="me@adwaith.dev"}
]
description = "A way to manage commit messages"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "argcomplete>=3.6.2",
]


[project.scripts]
gitc = "git_changes:main"

[build-system]
requires = ["setuptools>=61.0"]

# [tool.setuptools.packages.find]
# exclude = ["test", "tests"]

[project.urls]
Homepage = "https://github.com/Adwaith-Rajesh/git-changes"
